# potato-claw

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  api.py  main.py  pyproject.toml  requirements-api.txt  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
src/: onboarding.py
src/agentes/: base.py  coordenador.py  executor.py  sessao_codigo.py  templates.py
src/conexoes/: __init__.py  bus.py  runtime.py  servidor.py
src/core/: analisador.py  classificador.py  config.py  contexto.py  llm.py  recursos.py
src/extensoes/: __init__.py
src/ferramentas/: resolver.py  web_async.py  web_rag.py
src/memoria/: cache.py  semantica.py  sqlite.py
src/provedores/: __init__.py  base.py  litellm_provider.py  (+2 more)
tests/: conftest.py  test_analisador.py  test_api.py  test_cache.py  test_channels_base.py  test_channels_cli.py  test_channels_manager.py  test_channels_registry.py  test_channels_telegram.py  test_classificador.py  test_conexoes_bus.py  test_config_hardware.py  test_contexto.py  test_coordenador.py  test_executor.py  test_extrair_codigo.py  test_ferramentas.py  test_llm.py  test_llm_fachada.py  test_mcp_client.py  test_mcp_stdio.py  test_memoria_sessao.py  test_metricas.py  test_onboarding.py  test_provedores_base.py  test_provedores_litellm.py  test_provedores_ollama.py  test_provedores_registry.py  test_runtime.py  test_scheduler.py  test_semantica_performance.py  test_servidor.py  test_sessao_codigo.py  test_sessao_manager.py  test_skills_creator.py  test_skills_loader.py  test_utils.py  test_web_rag.py
(+14 files in other folders)
